k8s/comments-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-service
  template:
    metadata:
      labels:
        app: comments-service
    spec:
      containers:
        - name: comments-service
          image: registry.gitlab.com/hamdane10/you-scout/comments-service:v10.0
          ports:
            - containerPort: 8071
      imagePullSecrets:
        - name: registry-crds
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments-service
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
