k8s/mongodb-comments-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-comments-service
spec:
  serviceName: "mongodb-comments-service"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-comments-service
  template:
    metadata:
      labels:
        app: mongodb-comments-service
    spec:
      containers:
        - name: mongodb
          image: mongo:4.2.0
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-comments-service
spec:
  selector:
    app: mongodb-comments-service
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
