k8s/post-handling-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-handling-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-handling-service
  template:
    metadata:
      labels:
        app: post-handling-service
    spec:
      containers:
        - name: post-handling-service
          image: registry.gitlab.com/hamdane10/you-scout/post-service:v3.0
          ports:
            - containerPort: 8001
      imagePullSecrets:
        - name: registry-crds
---
apiVersion: v1
kind: Service
metadata:
  name: post-handling-service
spec:
  selector:
    app: post-handling-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
