k8s/skills-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skills-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skills-service
  template:
    metadata:
      labels:
        app: skills-service
    spec:
      containers:
        - name: skills-service
          image: registry.gitlab.com/hamdane10/you-scout/skills-service:v2.0
          ports:
            - containerPort: 8072
      imagePullSecrets:
        - name: registry-crds
---
apiVersion: v1
kind: Service
metadata:
  name: skills-service
spec:
  selector:
    app: skills-service
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
